Example_latest/namespace_latest.yml
apiVersion: v1
kind: Namespace
metadata:
  name: kubilab-latest
  labels:
    environment: latest
