Example_latest/nginx_deploy_latest.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
  namespace: kubilab-latest
  labels:
    environment: kubilab
spec:
  replicas: 6
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx:latest #option to valid the test v1.24-perl
        ports:
        - containerPort: 80
