Example_latest/policy_latest_binding.yml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: "policy-latest-binding"
spec:
  policyName: "policy-latest"
  validationActions: [Warn, Audit] #https://kubernetes.io/docs/reference/access-authn-authz/validating-admission-policy/#validation-actions
  matchResources:
    namespaceSelector:
      matchLabels:
        environment: latest
